# hiddb-sdk-py

./: .env  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  tox.ini
examples/: database.py
examples/asynchronous/: database.py  getting_started.py
examples/synchronous/: database.py  getting_started.py  tutorial.py
src/: config.py  main.py
src/hiddb/: asynchronous.py  config.py  synchronous.py
tests/: test_asynchronous.py  test_hiddb_sdk_py.py  test_sdk.py  test_synchronous.py
