[tool.poetry]
name = "hiddb-sdk-py"
version = "0.1.0"
description = ""
authors = ["Benjamin Bolbrinker <benjamin.bolbrinker@hiddb.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
PyJWT = "^2.3.0"
openapi-python-client = "^0.11.1"
asyncio = "^3.4.3"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
mypy = "^0.931"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
