[tool.poetry]
name = "hiddb"
version = "0.1.3"
description = "Python SDK for HIDDB"
keywords = [
    "HIDDB", 
    "hiddb", 
    "vector database", 
    "similarity search"
    ]
readme = "README.md"
license = "MIT"
homepage = "https://hiddb.com"
repository = "https://github.com/hiddb/hiddb-sdk-py.git"
include = [
    "LICENSE",
    ]
authors = ["Benjamin Bolbrinker <benjamin.bolbrinker@hiddb.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyJWT = "^2.3.0"
asyncio = "^3.4.3"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
mypy = "^0.931"
black = "^22.1.0"
tox = "^3.24.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
